[tool.poetry]
name = "marine-geo-data-process"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
kafka-python = "^2.0.2"
lz4 = "^4.3.3"
cffi = "^1.16.0"
pyspark = "^3.5.1"
pandas = "^2.2.1"
sqlalchemy = "^2.0.28"
psycopg2-binary = "^2.9.9"
numpy = "^1.26.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
